--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   margin: 0px;
   padding: 0px;
   font-family: 'normal normal normal 20px/1.4em futura-lt-w01-book,futura-lt-w05-book,sans-serif';
+  box-sizing: border-box;
 }
 
 a {
